static-embassy/analysis-api/analysis/atlas-analysis-api-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mykrobe-atlas-analysis-worker
  name: mykrobe-atlas-analysis-worker
  namespace: default
spec:
  selector:
    matchLabels:
      app: mykrobe-atlas-analysis-worker
  template:
    metadata:
      labels:
        app: mykrobe-atlas-analysis-worker
    spec:
      containers:
      - args:
        - -A
        - app.celery
        - worker
        - -O
        - fair
        - -l
        - debug
        - --concurrency=1
        command:
        - celery
        image: phelimb/mykrobe-atlas-analysis-api:113af42
        imagePullPolicy: IfNotPresent
        name: mykrobe-atlas-analysis
        volumeMounts:
        - mountPath: /data/
          name: uploads-data
      volumes:
      - name: uploads-data
        persistentVolumeClaim:
          claimName: uploads-data
