static-embassy/analysis-api/analysis/atlas-analysis-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mykrobe-atlas-analysis-api
  name: mykrobe-atlas-analysis-api
  namespace: default
spec:
  ports:
  - nodePort: 30412
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mykrobe-atlas-analysis-api
  type: NodePort
